--- a/style.css
+++ b/style.css
@@ -8,3 +8,118 @@
   font-weight: 400px;
   font-style: normal;
 }
+
+/* shared styles */
+
+.display-flex{
+  display: flex;
+}
+
+.btn-primary{
+  background-color: #FF900E;
+  color: white;
+  padding: 21px 25px;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 6px;
+  border: none;
+}
+
+main > section{
+margin-top: 130px;
+}
+
+
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* dark 02 */
+
+.text-gray{
+  color: #424242;
+}
+
+/* dark 03 */
+.text-light-gray{
+  color: #727272;
+}
+
+.bg-light{
+  background-color: rgba(255, 144, 14, 0.10);
+}
+
+.navbar{
+  justify-content: space-between;
+  align-items: center;
+}
+
+.brand{
+  font-weight: 700;
+  font-size: 3em;
+}
+
+.nav-link{
+ text-decoration: none;
+ font-weight: 500;
+}
+
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+
+.navbar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* banner styles */
+.banner-content{
+  max-width: 852px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.banner-title{
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.banner-img{
+  width: 100%;
+}
+
+/* team and features styles */
+.teams{
+  align-items: center;
+}
+
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+.features-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+
+#quick-list{
+  font-weight: 500;
+}
+
+/* Responsive media query */
+@media screen and (max-width: 576px) {
+  .navbar, .nav-link{
+    flex-direction: column;
+  }
+}
