made team responsive

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 
 /* shared styles */
 
+
+
 .display-flex{
   display: flex;
 }
@@ -35,7 +37,16 @@ main{
   margin: 0 auto;
 }
 
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+
 /* dark 02 */
+
+.text-primary{
+  color: #FF900E;
+}
 
 .text-gray{
   color: #424242;
@@ -108,9 +119,8 @@ main{
   max-width: 530px;
 }
 
-.features-title{
-  font-size: 2.8rem;
-  font-weight: 700;
+.features-description{
+
 }
 
 #quick-list{
@@ -119,7 +129,27 @@ main{
 
 /* Responsive media query */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-link{
+  .navbar, 
+  .nav-link
+  .teams{
     flex-direction: column;
+  }
+
+  .team-img-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .our-features{
+    margin-left: 20px;
+  }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin: 50px auto;
   }
 }
