--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ main{
 }
 
 /* dark 03 */
-.text-light-gray{
+.text-light-gray , .fact-name{
   color: #727272;
 }
 
@@ -125,6 +125,40 @@ main{
 
 #quick-list{
   font-weight: 500;
+}
+
+/* facts styles */
+
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card{
+  border: 1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.fact-description{
+  max-width: 540px;
 }
 
 /* Responsive media query */
